--- a/deny.toml
+++ b/deny.toml
@@ -194,6 +194,12 @@ version = "0.3"
 name = "fastrand"
 version = "1.0"
 
+# dash-mpd depends on an older version of quick-xml
+# https://github.com/emarsden/dash-mpd-rs/pull/32
+[[bans.skip]]
+name = "quick-xml"
+version = "0.28"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
