--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -14,7 +14,7 @@ atomic_refcell = "0.1"
 once_cell = "1.0"
 color-thief = "0.2.2"
 color-name = "1.0.0"
-image = "0.24.2"
+image = { version = "0.24.2", default-features = false }
 image_hasher = "1.0.0"
 dssim-core = { version = "3.2.3", optional = true }
 rgb = { version = "0.8", optional = true }
