--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -20,12 +20,14 @@ pangocairo.workspace = true
 byteorder = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
-cea708-types = "0.3"
+cea708-types = "0.3.1"
+cea608-types = "0.1.1"
 once_cell.workspace = true
 gst = { workspace = true, features = ["v1_16"]}
 gst-base = { workspace = true, features = ["v1_18"]}
 gst-video = { workspace = true, features = ["v1_16"]}
 winnow = "0.6"
+smallvec = "1"
 
 [dev-dependencies]
 pretty_assertions = "1"
