--- a/mux/fmp4/Cargo.toml
+++ b/mux/fmp4/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/lib.rs"
 [dev-dependencies]
 gst-app = { workspace = true, features = ["v1_18"] }
 gst-check = { workspace = true, features = ["v1_18"] }
+gst-pbutils = { workspace = true, features = ["v1_20"] }
 m3u8-rs = "5.0"
 chrono = "0.4.35"
 dash-mpd = { version = "0.16", default-features = false }
