--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -317,6 +317,7 @@ check commits:
   script:
     - ci-fairy check-commits --textwidth 0 --no-signed-off-by
     - ci/check-for-symlinks.sh
+    - ci/check-meson-version.sh
 
 clippy:
   extends: '.debian:12-stable'
