--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -62,6 +62,7 @@ crossbeam-channel = { version = "0.5", optional = true }
 
 [dev-dependencies]
 gst-plugin-rtp = { path = "../rtp" }
+tokio = { version = "1", features = ["signal"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-log = "0.2"
