--- a/video/gtk4/Cargo.toml
+++ b/video/gtk4/Cargo.toml
@@ -6,7 +6,7 @@ repository.workspace = true
 license = "MPL-2.0"
 edition.workspace = true
 rust-version.workspace = true
-description = "GStreamer GTK 4 Sink element and Paintable widget"
+description = "GStreamer GTK 4 sink element"
 
 [dependencies]
 gtk.workspace = true
